--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -12,7 +12,10 @@
     "three": "^0.180.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
+    "@types/jest": "^30.0.0",
     "@types/three": "^0.180.0",
+    "jest": "^30.2.0",
     "typescript": "^5.9.2",
     "vite": "^6.3.6"
   }
